--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
     </style>
 </head>
-<body style="background: url(wallpaper1.jpg);">
+<body style="background: url(wallpaper1.jpg) no-repeat center fixed; background-size: cover;">
     <div class="overlay"></div>
     <div class="alert" style="position: fixed; top: 0px; width: 100%; height: 50px;">
         <marquee behavior="scroll" direction="left">
@@ -53,7 +53,7 @@
             <center>
                 <img class="profile-photo" src="profile.jpg" alt="">
             </center>
-            <h1>Deo Exel A. Agustin</h1>
+            <h1>Joeshua L. Paraguison</h1>
             <p>I'm a Junior Web Developer</p>
         </div>
     </div>
