--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <center>
                 <img class="profile-photo" src="profile.jpg" alt="">
             </center>
-            <h1>Joeshua L. Paraguison</h1>
+            <h1>Deo Exel A. Agustin</h1>
             <p>I'm a Junior Web Developer</p>
         </div>
     </div>
